# Audio-Video-DB

./: .gitignore  CMakeLists.txt  Carrier.txt  Final.txt  Library.sln  ToDo  db.yaml  main.cpp
Controller/: MainController.cpp  MainController.h
Model/: Actor.cpp  Actor.h  Artist.cpp  Artist.h  Person.cpp  Person.h  Position.cpp  Position.h  Song.cpp  Song.h
Model/Audio/: AudioCd.cpp  AudioCd.h  AudioTape.cpp  AudioTape.h
Model/Others/: Actor.cpp  Actor.h  Artist.cpp  File.cpp  File.h  Song.cpp
Model/Video/: Video.cpp  Video.h  VideoCd.cpp  VideoCd.h  VideoTape.cpp  VideoTape.h
View/: ConsoleView.cpp  ConsoleView.h
